/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package quilkin.filters.matches.v1alpha1;

import "google/protobuf/struct.proto";
import "envoy/config/listener/v3/listener_components.proto";

message Match {
    message Branch {
        google.protobuf.Value value = 1;
        envoy.config.listener.v3.Filter filter = 2;
    }

    message Config {
        google.protobuf.StringValue metadata_key = 1;
        repeated Branch branches = 2;
        envoy.config.listener.v3.Filter fallthrough = 4;
    }

    optional Config on_read = 1;
    optional Config on_write = 2;
}
